# JOSS

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh
src/: .clangformat  controller.cpp  controller.hpp  header.hpp  main.cpp  model.cpp  model.hpp  utils.cpp  view.cpp  view.hpp
src/components/: resizable_split.cpp
